[gd_scene load_steps=9 format=3 uid="uid://bqi32xw4k2y1t"]

[ext_resource type="PackedScene" uid="uid://c120w680jhaud" path="res://player.tscn" id="1_kgh47"]
[ext_resource type="Script" path="res://main.gd" id="1_uapqc"]
[ext_resource type="PackedScene" uid="uid://njbcnse0uaxe" path="res://chest.tscn" id="5_b0lda"]
[ext_resource type="AudioStream" uid="uid://d0mvktcjx4e8l" path="res://Picked Coin Echo.wav" id="6_etegv"]
[ext_resource type="AudioStream" uid="uid://ctsy1pqi51x81" path="res://skill_hit.mp3" id="7_ati8r"]
[ext_resource type="Script" path="res://chest.gd" id="7_ppx7a"]
[ext_resource type="AudioStream" uid="uid://dy6jv8lm72xqy" path="res://402766__matrixxx__retro-coin-04.wav" id="8_0b1wc"]
[ext_resource type="AudioStream" uid="uid://cbwghu1fw0gq1" path="res://music.mp3" id="8_32enr"]

[node name="game" type="Node2D"]
script = ExtResource("1_uapqc")

[node name="background" type="ColorRect" parent="."]
offset_right = 1151.0
offset_bottom = 645.0

[node name="player" parent="." instance=ExtResource("1_kgh47")]
position = Vector2(37, 41)

[node name="chest" parent="." instance=ExtResource("5_b0lda")]
position = Vector2(1120, 613)
scale = Vector2(2.57, 2.57)
script = ExtResource("7_ppx7a")

[node name="coinPickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_etegv")

[node name="coinMissingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ati8r")

[node name="coinCollectedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0b1wc")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_32enr")
autoplay = true

[connection signal="body_entered" from="chest" to="." method="_on_chest_body_entered"]
